examples/15.istio-on-gke/neg/ingressgateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-neg-svc
  namespace: istio-system
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: ClusterIP
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway-neg-ing
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  backend:
    serviceName: istio-ingressgateway-neg-svc
    servicePort: 80
